unpackaged/objects/EADashboardByCountryCS__mdt.object
<CustomObject>
  <fields>
    <fullName>AccountDashboardName__c</fullName>
    <label>Account Dashboard Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountInsideSalesDashboardFilter__c</fullName>
    <label>Account Inside Sales Dashboard Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>AccountInsideSalesDashboard__c</fullName>
    <label>Account Inside Sales Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountMarketingDashboardFilter__c</fullName>
    <label>Account Marketing Dashboard Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>AccountMarketingDashboard__c</fullName>
    <label>Account Marketing Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountOutsideSalesDashboardFilter__c</fullName>
    <label>Account Outside Sales Dashboard Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>AccountOutsideSalesDashboard__c</fullName>
    <label>Account Outside Sales Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountPlanDashboard__c</fullName>
    <label>Account Plan Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountPlanFilter__c</fullName>
    <label>Account Plan Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>AccountPlanMemberDashboard__c</fullName>
    <label>Account Plan Member Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountPlanMemberFilter__c</fullName>
    <label>Account Plan Member Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>AccountServiceDashboardFilter__c</fullName>
    <label>Account Service Dashboard Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>AccountServiceDashboard__c</fullName>
    <label>Account Service Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AD</fullName>
        </value>
        <value>
          <fullName>AE</fullName>
        </value>
        <value>
          <fullName>AF</fullName>
        </value>
        <value>
          <fullName>AG</fullName>
        </value>
        <value>
          <fullName>AI</fullName>
        </value>
        <value>
          <fullName>AL</fullName>
        </value>
        <value>
          <fullName>AM</fullName>
        </value>
        <value>
          <fullName>AN</fullName>
        </value>
        <value>
          <fullName>AO</fullName>
        </value>
        <value>
          <fullName>AQ</fullName>
        </value>
        <value>
          <fullName>AR</fullName>
        </value>
        <value>
          <fullName>AS</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>AW</fullName>
        </value>
        <value>
          <fullName>AX</fullName>
        </value>
        <value>
          <fullName>AZ</fullName>
        </value>
        <value>
          <fullName>BA</fullName>
        </value>
        <value>
          <fullName>BB</fullName>
        </value>
        <value>
          <fullName>BD</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BF</fullName>
        </value>
        <value>
          <fullName>BG</fullName>
        </value>
        <value>
          <fullName>BH</fullName>
        </value>
        <value>
          <fullName>BI</fullName>
        </value>
        <value>
          <fullName>BJ</fullName>
        </value>
        <value>
          <fullName>BL</fullName>
        </value>
        <value>
          <fullName>BM</fullName>
        </value>
        <value>
          <fullName>BN</fullName>
        </value>
        <value>
          <fullName>BO</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CountryFullName__c</fullName>
    <label>Country Full Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>BEX</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Default</fullName>
          <default>true</default>
          <label>Default</label>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>Distributor</fullName>
        </value>
        <value>
          <fullName>Egypt</fullName>
        </value>
        <value>
          <fullName>Estonia</fullName>
        </value>
        <value>
          <fullName>Faroe Islands</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Greenland</fullName>
        </value>
        <value>
          <fullName>Holland</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>HQ: DE</fullName>
        </value>
        <value>
          <fullName>HQ: NL</fullName>
        </value>
        <value>
          <fullName>HQ: SE</fullName>
        </value>
        <value>
          <fullName>Iceland</fullName>
        </value>
        <value>
          <fullName>INDIA</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
        <value>
          <fullName>Ireland</fullName>
        </value>
        <value>
          <fullName>Italy</fullName>
        </value>
        <value>
          <fullName>Japan</fullName>
        </value>
        <value>
          <fullName>Jordan</fullName>
        </value>
        <value>
          <fullName>Kazakhstan</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Germany</fullName>
          <default>true</default>
          <label>Germany</label>
        </value>
        <value>
          <fullName>Default</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>HomeDashboardName__c</fullName>
    <label>Home Dashboard Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>HomeInsideSalesDashboardFilter__c</fullName>
    <label>Home Inside Sales Dashboard Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>HomeInsideSalesDashboard__c</fullName>
    <label>Home Inside Sales Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>HomeMarketingDashboardFilter__c</fullName>
    <label>Home Marketing Dashboard Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>HomeMarketingDashboard__c</fullName>
    <label>Home Marketing Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>HomeOutsideSalesDashboardFilter__c</fullName>
    <label>Home Outside Sales Dashboard Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>HomeOutsideSalesDashboard__c</fullName>
    <label>Home Outside Sales Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>HomeServiceDashboardFilter__c</fullName>
    <label>Home Service Dashboard Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>HomeServiceDashboard__c</fullName>
    <label>Home Service Dashboard</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <label>EA Dashboard By Country</label>
  <pluralLabel>EADashboardByCountryCS</pluralLabel>
</CustomObject>